--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular-datatables": "^7.0.0",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
     "datatables.net": "^1.10.19",
     "datatables.net-dt": "^1.10.19",
